🐛 fix(mongodb.js): change the query property to include the description and the operation for better readability 🐛 fix(mysql.js): change the query property to include the state, command, and info for better understanding 🐛 fix(postgre.js): change the query property to include the backend type and concatenate it with the query for better clarity ✨ feat(process-dialog.component.html): add a new column for displaying the database name ✨ feat(process-dialog.component.scss): increase the width and height of the dialog and add padding to table cells for better visibility ✨ feat(process-dialog.component.ts): change the displayed columns to include the new 'db' column and reduce the refresh interval to 1 second

--- a/front/src/app/process/process-dialog.component.scss
+++ b/front/src/app/process/process-dialog.component.scss
@@ -1,10 +1,16 @@
 .mat-dialog-content {
-	width: 600px;
-	height: 400px;
+	width: 700px;
+	height: 350px;
+	resize: both;
+	overflow: auto;
 
 	table {
 		height: 100%;
 		width: 100%;
+
+		td {
+			padding: 4px;
+		}
 	}
 }
 
